--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,13 @@
 .ql-editor {
   min-height: 300px;
 }
+
+.featured-image {
+  width: 100%;
+  max-height: 500px;
+  object-fit: contain;
+
+  /* display: block;
+  margin: 0 auto;
+  object-fit: cover; */
+}
